# AIM

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md
apps/web/: Dockerfile  README.md  eslint.config.mjs  package.json
apps/worker/: Dockerfile  README.md
docs/api/: README.md
docs/architecture/: README.md  ai-diagnosis-input.md  ai-diagnosis-report.md
docs/decisions/: 0001-alert-channels-email-and-webhook.md  0001-webhook-alerts-over-email.md  README.md
docs/deployment/: gcp-vm-compose.md  restore-runbook.md  vm-compose.md
infra/: Caddyfile  README.md  compose.dev.yaml  compose.http.yaml  compose.yaml  env.production.example
migrations/: README.md  alembic.ini  env.py
migrations/versions/: 20260623_0001_baseline.py  20260624_0002_create_projects.py  20260624_0003_create_users.py  20260624_0004_add_project_owner.py  20260625_0005_add_domain_verification.py  20260625_0006_create_check_runs.py  20260626_0007_create_scanner_results.py  20260627_0008_create_lighthouse_results.py  20260627_0009_create_artifacts.py  20260627_0010_create_score_results.py  20260627_0011_create_run_comparisons.py  20260627_0012_create_test_scenarios.py  20260628_0012_create_test_scenarios.py  20260628_0013_create_scenario_runs.py  20260628_0014_create_scenario_failure_evidence.py  20260628_0015_add_scenario_failure_screenshot_artifacts.py  20260628_0016_link_scenario_runs_to_check_runs.py  20260630_0017_create_ai_reports.py  20260701_0018_create_incidents_alerts.py  20260703_0019_add_project_alert_email_settings.py  20260704_0020_add_ai_report_generator.py  20260704_0021_add_project_baseline_check_run.py  20260705_0022_add_project_scheduled_scans_enabled.py  20260706_0023_add_lighthouse_top_audits.py  20260707_0024_add_score_breakdown.py  20260708_0025_default_alert_email_off.py  20260708_0026_add_webhook_alert_channel.py  20260709_0027_add_project_api_tokens.py  20260710_0028_add_deploy_summary_alerts.py  (+6 more)
scripts/: README.md  backup-postgres.sh  deploy.sh  monitor-vm-health.sh
tests/: README.md
(+185 files in other folders)
