[project]
name = "aim"
version = "0.1.0"
description = "AI-powered web service quality assessment and monitoring platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic",
    "fastapi",
    "pydantic-settings",
    "psycopg[binary]",
    "sqlalchemy",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx",
    "mypy",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/src/aim_api"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["apps/api/src"]
testpaths = ["apps/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["apps/api/src", "apps/api/tests"]
plugins = ["pydantic.mypy"]
