[project]
name = "aim"
version = "0.1.0"
description = "AI-powered web service quality assessment and monitoring platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic",
    "celery[redis]",
    "email-validator",
    "fastapi",
    "httpx",
    "pydantic-settings",
    "psycopg[binary]",
    "pwdlib[argon2]",
    "pyjwt",
    "sqlalchemy",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/src/aim_api", "apps/worker/src/aim_worker"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["apps/api/src", "apps/worker/src"]
testpaths = ["apps/api/tests", "apps/worker/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["apps/api/src", "apps/api/tests", "apps/worker/src", "apps/worker/tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true
